--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "chandrayaan_3_tdd",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest -watchAll"
-  },
-  "author": "soham patel",
-  "license": "ISC",
-  "dependencies": {
-    "@types/jest": "^29.5.4",
-    "jest": "^29.6.4"
-  }
+    "name": "chandrayaan_3_tdd",
+    "type": "module",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest --watchAll"
+    },
+    "author": "soham patel",
+    "license": "ISC",
+    "dependencies": {},
+    "devDependencies": {
+        "@types/jest": "^29.5.4",
+        "@babel/preset-env": "^7.22.10",
+        "babel-jest": "^29.6.4",
+        "jest": "^29.6.4"
+    }
 }
